# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "autocxx-integration-tests"
version = "0.1.0"
autotests = false
edition = "2021"

[dependencies]
proc-macro2 = "1.0.11"
trybuild = "1.0.53"
test-log = "0.2.2"
env_logger = "0.9.0"
rust_info = "0.3.1"
cc = "1.0"
quote = "1.0"
once_cell = "1.7"
autocxx-engine = { version="=0.16.0", path="../engine", features = ["build"] }
# This is necessary for building the projects created
# by the trybuild test system...
autocxx = { path=".." }
link-cplusplus = "1.0"
tempfile = "3.1"
indoc = "1.0"
log = "0.4"
cxx = "1.0.54"
itertools = "0.10"
gag = "1.0"

[dependencies.syn]
version = "1.0.39"
features = [ "full" ]
#features = [ "full", "extra-traits" ]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
