# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "autocxx-integration-tests"
version = "0.1.0"
autotests = false
edition = "2021"

[dependencies]
proc-macro2 = "1.0.11"
trybuild = "1.0.53"
test-log = "0.2.2"
env_logger = "0.9.0"
rust_info = "0.3.1"
cc = "1.0"
quote = "1.0"
once_cell = "1.7"
autocxx-engine = { version="=0.18.0", path="../engine", features = ["build"] }
# This is necessary for building the projects created
# by the trybuild test system...
autocxx = { path=".." }
link-cplusplus = "1.0"
tempfile = "3.1"
indoc = "1.0"
log = "0.4"
cxx = "1.0.54"
itertools = "0.10"

[dependencies.syn]
version = "1.0.39"
features = [ "full" ]
#features = [ "full", "extra-traits" ]

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
