# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "autocxx-mdbook-preprocessor"
version = "0.16.0"
authors = ["adetaylor <adetaylor@chromium.org>"]
edition = "2021"

[dependencies]
clap = { version = "3", features = [ "cargo" ] }
serde_json = "1"
itertools = "0.10"
anyhow = "1"
regex = "1"
autocxx-integration-tests = { path = "../../integration-tests", version="0.1"}

[dependencies.syn]
version = "1.0.39"
features = [ "parsing" ]

[dependencies.proc-macro2]
version = "1.0.11"
features = [ "span-locations" ]

[dependencies.mdbook]
version = "0.4"
default-features = false