# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "autocxx-mdbook-preprocessor"
version = "0.18.0"
authors = ["adetaylor <adetaylor@chromium.org>"]
edition = "2021"

[dependencies]
clap = { version = "3", features = [ "cargo" ] }
serde_json = "1"
itertools = "0.10"
anyhow = "1"
regex = "1"
autocxx-integration-tests = { path = "../../integration-tests", version="0.1"}
rayon = "1.5"
gag = "1.0"
env_logger = "0.9.0"

[dependencies.syn]
version = "1.0.39"
features = [ "parsing" ]

[dependencies.proc-macro2]
version = "1.0.11"
features = [ "span-locations" ]

[dependencies.mdbook]
version = "0.4"
default-features = false