# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# https://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENSE-MIT or https://opensource.org/licenses/MIT>, at your
# option. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "autocxx-reduce"
version = "0.22.0"
authors = ["adetaylor <adetaylor@chromium.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx-engine = { version = "=0.22.0", path="../../engine" }
autocxx-parser = { version = "=0.22.0", path="../../parser", features = [ "reproduction_case" ] }
clap = { version = "3.1.2", features = ["cargo"] }
tempfile = "3.1"
indoc = "1.0"
itertools = "0.10"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
syn = "1.0.39"
quote = "1.0"
cxx-gen = "0.7.54"
regex = "1.5"
indexmap = "1.8"

[dev-dependencies]
assert_cmd = "1.0.3"
tempdir = "0.3.7"
indoc = "1.0"
proc-macro2 = "1.0"